force-app/main/default/objects/redwing__Learning_Category_Profile__c/redwing__Learning_Category_Profile__c.object-meta.xml
<CustomObject>
    <label>Catalog Profile (Obsolete)</label>
    <nameField>
        <displayFormat>CAP-{0000000}</displayFormat>
        <label>Catalog Profile ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Catalog Profiles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>