force-app/main/default/objects/redwing__Learning_Category_Profile__c/fields/redwing__Enable_Catalog_Training_Plans__c.field-meta.xml
<CustomField>
    <fullName>redwing__Enable_Catalog_Training_Plans__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this option if you want to enable all Learning Plans associated to this Catalog for the specified Profile</inlineHelpText>
    <label>Enable Catalog Learning Plans</label>
    <type>Checkbox</type>
</CustomField>