force-app/main/default/objects/redwing__Learning_Category_Profile__c/fields/redwing__Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>redwing__Profile_Id__c</fullName>
    <label>Profile Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>